--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="/imagens/logo.svg" alt="Logo da alura">
+        <img src="logo.svg" alt="Logo da alura">
     </header>
 
     <section class="principal">
@@ -32,7 +32,7 @@
     <section class="mensagem">
         <div class="container">
             <div class="nenhuma-mensagem">
-                <img src="/imagens/imagem-principal.svg" alt="Uma pessoa segurando uma lupa">
+                <img src="imagem-principal.svg" alt="Uma pessoa segurando uma lupa">
 
                 <div class="nenhuma-mensagem-titulo">
                     <h1>Nenhuma mensagem encontrada</h1>
